--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,17 +1,21 @@
 <title>Blog main page</title>
 <header>
-    <picture>
-        <img src="" alt="profile pic">
-    </picture>
-    <title>Home</title>
-    <input type="search" placeholder="search box">
+    <div class="border border-primary">    
+        <picture class="pull-left d-inline"><img src="" alt="profile pic"></picture>
+        <h1 class="text-center">Blog Home</h1>
+        <div class="d-inline pull-right">
+            <input type="search" placeholder="search box"> 
+        </div>
+    </div>
 </header>
-<nav>
-    <button onclick="location.href = ''">Blogger suggestion</button>
-    <button onclick="location.href = ''">Blog reccomendation</button>
-    <button onclick="location.href = ''">Create</button>
-    <button onclick="location.href = ''">Logout</button>
-</nav>
+<div class="container border border-primary">
+    <nav>
+        <button class="btn btn-primary" onclick="location.href = ''">Blogger suggestion</button>
+        <button class="btn btn-primary" onclick="location.href = ''">Blog reccomendation</button>
+        <button class="btn btn-primary" onclick="location.href = ''">Create</button>
+        <button class="btn btn-primary" onclick="location.href = ''">Logout</button>
+    </nav>
+</div>
 <section id="disp_own_blog_cont">
     <h2>
         {{username}}
