style signin page

--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,8 +1,10 @@
 <title>Blog main page</title>
 <header>
-    <div class="border border-primary">    
-        <picture class="pull-left d-inline"><img src="" alt="profile pic"></picture>
-        <h1 class="text-center">Blog Home</h1>
+    <h1 class="text-center">Blog Home</h1>
+    <div class="container border border-primary">
+        <div class="d-inline">
+            <picture ><img src="" alt="profile pic"></picture>
+        </div>
         <div class="d-inline pull-right">
             <input type="search" placeholder="search box"> 
         </div>
@@ -10,10 +12,10 @@
 </header>
 <div class="container border border-primary">
     <nav>
-        <button class="btn btn-primary" onclick="location.href = ''">Blogger suggestion</button>
-        <button class="btn btn-primary" onclick="location.href = ''">Blog reccomendation</button>
-        <button class="btn btn-primary" onclick="location.href = ''">Create</button>
-        <button class="btn btn-primary" onclick="location.href = ''">Logout</button>
+        <button class="btn btn-primary" onclick="location.href = '#'">Blogger suggestion</button>
+        <button class="btn btn-primary" onclick="location.href = '#'">Blog reccomendation</button>
+        <button class="btn btn-primary" onclick="location.href = '#'">Create</button>
+        <button class="btn btn-primary" onclick="location.href = '#'">Logout</button>
     </nav>
 </div>
 <section id="disp_own_blog_cont">
