--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -1,102 +1,100 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Times New Roman', Times, serif;
-    background:#f2f2f2;
-    height: 100vh;
-    overflow: hidden;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Times New Roman", Times, serif;
+  background: #f2f2f2;
+  height: 100vh;
+  overflow: hidden;
 }
-.center
-{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-.center h1{
-    text-align: center;
-}
-.center h3{
-    padding: 0 0 10px 0;
-    text-align: center;
+.center {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.center form{
-    padding: 0 40px;
-    box-sizing: border-box;
+.center h1 {
+  text-align: center;
+}
+.center h3 {
+  padding: 0 0 10px 0;
+  text-align: center;
 }
 
-form .txt_field{
-    position: relative;
-    border-bottom: 2px solid #adadad;
-    margin: 30px 0;
-} 
-
-.txt_field input{
-    width: 100%;
-    padding: 0 5px;
-    height: 40px;
-    font-size: 16px;
-    border: none;
-    background: none;
-    outline: none;
+.center form {
+  padding: 0 40px;
+  box-sizing: border-box;
 }
 
-.txt_field label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
-    transition: 0.5s;
+form .txt_field {
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin: 30px 0;
 }
 
-.txt_field span::before{
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    /*background: #2691d9; */
+.txt_field input {
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.txt_field label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.txt_field span::before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  /*background: #2691d9; */
 }
 
 .txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
-    top: -5px;
-    color: #2691d9;
+.txt_field input:valid ~ label {
+  top: -5px;
+  color: #2691d9;
 }
 
-
-input[type="submit"]{
-    width: 100%;
-    height: 50px;
-    border: 1px solid;
-    background: slategray;
-    border-radius: 25px;
-    font-size: 18px;
-    color: #e9f4fb;
-    font-weight: 500;
+button {
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: slategray;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 500;
 }
 
-input[type="submit"]:hover{
-    border-color: slategray;
-    transition: .5s;
+button:hover {
+  border-color: slategray;
+  transition: 0.5s;
 }
 
-.SignUp_link{
-    margin: 30px 0;
-    text-align: center;
-    font-size: 16px;
-    color: #666666;
+.SignUp_link {
+  margin: 30px 0;
+  text-align: center;
+  font-size: 16px;
+  color: #666666;
 }
 
-.SignUp_link a{
-    color: lightskyblue;
-    text-decoration: none;
+.SignUp_link a {
+  color: lightskyblue;
+  text-decoration: none;
 }
 /* #e9f4fb */
 /* 
