--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,24 +1,26 @@
 <title>Blog main page</title>
 <header>
-    <h1 class="text-center">Blog Home</h1>
-    <div class="container border border-primary">
-        <div class="d-inline">
-            <picture ><img src="" alt="profile pic"></picture>
-        </div>
-        <div class="d-inline pull-right">
+    <div class="container border border-primary d-flex flex-row-reverse justify-content-between align-items-center">
+        <div class="">
             <input type="search" placeholder="search box"> 
+        </div>
+        <div>
+            <h1>Blog Home</h1>
+        </div>
+        <div class="d-inline">
+            <picture><img src="../icons/" alt="profile pic"></picture>
         </div>
     </div>
 </header>
 <div class="container border border-primary">
-    <nav>
-        <button class="btn btn-primary" onclick="location.href = '#'">Blogger suggestion</button>
-        <button class="btn btn-primary" onclick="location.href = '#'">Blog reccomendation</button>
-        <button class="btn btn-primary" onclick="location.href = '#'">Create</button>
-        <button class="btn btn-primary" onclick="location.href = '#'">Logout</button>
-    </nav>
+    <div class ="d-flex flex-row-reverse justify-content-around">
+        <span><button class="btn btn-primary" onclick="location.href = '#'">Logout</button></span>
+        <span><button class="btn btn-primary" onclick="location.href = '#'">Create</button></span>
+        <span><button class="btn btn-primary" onclick="location.href = '#'">Blog reccomendation</button></span>
+        <span><button class="btn btn-primary" onclick="location.href = '#'">Blogger suggestion</button></span>
+    </div>
 </div>
-<section id="disp_own_blog_cont">
+<section id="disp_own_blog_cont" class="container">
     <h2>
         {{username}}
     </h2>
