--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,6 +1,6 @@
 <title>Blog main page</title>
 <header>
-    <div class="container border border-primary d-flex flex-row-reverse justify-content-between align-items-center">
+    <div class="container d-flex flex-row-reverse justify-content-between align-items-center">
         <div class="">
             <input type="search" placeholder="search box"> 
         </div>
@@ -12,7 +12,7 @@
         </div>
     </div>
 </header>
-<div class="container border border-primary">
+<div class="container">
     <div class ="d-flex flex-row-reverse justify-content-around">
         <span><button class="btn btn-primary" onclick="location.href = '#'">Logout</button></span>
         <span><button class="btn btn-primary" onclick="location.href = '#'">Create</button></span>
@@ -20,13 +20,11 @@
         <span><button class="btn btn-primary" onclick="location.href = '#'">Blogger suggestion</button></span>
     </div>
 </div>
-<section id="disp_own_blog_cont" class="container">
-    <h2>
-        {{username}}
-    </h2>
-    <ul class="list-group">
+<section class="container">
+    <div><h2>{{username}}</h2></div>
+    <div class="row row-cols-3">
         {{#each blogs}}
-            <li class="list-group-item">{{this.title}}</li>
+            <div class="col">{{this.title}}</div>
         {{/each}}
-    </ul>
+    </div>
 </section>
