updated the user page for tracking

--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -23,7 +23,7 @@
                     <p class="text-center disabled text-dark" id="email" aria-readonly="true">{{email}}</p>
                 </li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a id="profile-link" class="dropdown-item" href="#">Profile</a></li>
                 <li><a class="dropdown-item" href="#">Create Blog</a></li>
                 <li><a class="dropdown-item" href="#">Logout</a></li>
             </ul>
