--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,12 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
     <script src="../scripts/bootstrap.min.js"></script>
     <script src="../scripts/userpage.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"
+    >
+    </script>
   </head>
-  <body>
+  <body onload="updateTracking()">
     {{{body}}}
   </body>
 </html>
