--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -36,4 +36,9 @@
       <div>No written blogs</div>
     {{/if}}
   </div>
+  <hr />
+  <div class="container m-5">
+    <button onclick="loadChart()" class="btn btn-primary mb-2">Load tracking</button>
+    <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+  </div>
 </div>
