--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -38,7 +38,8 @@
   </div>
   <hr />
   <div class="container m-5">
-    <button onclick="loadChart()" class="btn btn-primary mb-2">Load tracking</button>
+    <button onclick={{chart_load_function}} class="btn btn-primary mb-2">Load
+      tracking</button>
     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
   </div>
 </div>
