made navbar connections

--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="w-25">
-      <a href="/" class="btn btn-secondary">Home</a>
+      <a href="/blogHome/{{user_email}}" class="btn btn-secondary">Home</a>
     </div>
   </div>
   <small class="text-muted mt-2 mb-3">{{email_id}} | {{username}}</small>
