--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -9,8 +9,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="/blogHome/{{email}}">Blog Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Bloger Suggestion</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Blog Recommendation</a></li>
+            <li class="nav-item"><a class="nav-link" href="/user_suggestions/{{email}}">Bloger Suggestion</a></li>
+            <li class="nav-item"><a class="nav-link" href="/blog_suggestions/{{email}}">Blog Recommendation</a></li>
         </ul>
         <form class="d-inline-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
