added logout function

--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -25,7 +25,7 @@
                 <li><hr class="dropdown-divider"></li>
                 <li><a id="profile-link" class="dropdown-item" href="#">Profile</a></li>
                 <li><a class="dropdown-item" href="#">Create Blog</a></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
+                <li><a onclick="logout()" class="dropdown-item" href="#">Logout</a></li>
             </ul>
         </div>
   </div>
