--- a/views/viewBlog.handlebars
+++ b/views/viewBlog.handlebars
@@ -23,7 +23,7 @@
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li><a class="dropdown-item" href="#">Create Blog</a></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
+                <li><a onclick="logout()" class="dropdown-item" href="#">Logout</a></li>
             </ul>
         </div>
   </div>
