added nav bar to all pages, resolved the issue where the database had too many connextions and server stops

--- a/views/viewBlog.handlebars
+++ b/views/viewBlog.handlebars
@@ -6,9 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/blogHome/{{email}}">Blog Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/user_suggestions/{{email}}">Bloger Suggestion</a></li>
-            <li class="nav-item"><a class="nav-link" href="/blog_suggestions/{{email}}">Blog Recommendation</a></li>
+            <li class="nav-item"><a class="nav-link" href="/blogHome">Blog Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/user_suggestions">Bloger Suggestion</a></li>
+            <li class="nav-item"><a class="nav-link" href="/blog_suggestions">Blog Recommendation</a></li>
         </ul>
         <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
