--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -1,3 +1,33 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Blog Website</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="/blogHome">Blog Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/user_suggestions">Bloger Suggestion</a></li>
+            <li class="nav-item"><a class="nav-link" href="/blog_suggestions">Blog Recommendation</a></li>
+        </ul>
+        <form class="d-inline-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+        <div class="nav-item dropdown ms-2">
+            <img alt="profpic" class="float-right d-inline mt-0 mp-0" src="../icons/user.png" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="height: 30px;"/>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><h4 class="dropdown-item text-center disabled text-dark" id="username" aria-readonly="true">{{username}}</h4>
+                    <p class="text-center disabled text-dark" id="email" aria-readonly="true">{{email}}</p>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a id="profile-link" class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" href="#">Create Blog</a></li>
+                <li><a onclick="logout()" class="dropdown-item" href="#">Logout</a></li>
+            </ul>
+        </div>
+  </div>
+</nav>
 <div class="container p-6">
   <div class="row mt-5">
     <div class="w-75">
@@ -6,11 +36,8 @@
         <span>{{{followButton this}}}</span>
       </div>
     </div>
-    <div class="w-25">
-      <a href="/blogHome/{{user_email}}" class="btn btn-secondary">Home</a>
-    </div>
   </div>
-  <small class="text-muted mt-2 mb-3">{{email_id}} | {{username}}</small>
+  <small class="text-muted mt-2 mb-3">{{trg_email_id}} | {{trg_username}}</small>
   <div class="row">
     <span class="w-50 border">Followers
       <span class="display-6">{{follower}}</span></span>
