--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Times New Roman", Times, serif;
   background: #f2f2f2;
   height: 100vh;
   overflow: hidden;
@@ -96,6 +95,7 @@ button {
   width: 100%;
   border: 1px solid;
   text-align: center;
+  color: red;
 }
 
 .err-message:hover{
