added logout funtionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,10 +18,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="/blogHome">Blog Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/user_suggestions">Bloger Suggestion</a></li>
-                <li class="nav-item"><a class="nav-link" href="/blog_suggestions">Blog Recommendation</a></li>
-                <li class="nav-item"><a class="nav-link" href="/create_blog">Create blog</a></li>
+                <li class="nav-item"><a class="nav-link {{home}}" href="/blogHome">Blog Home</a></li>
+                <li class="nav-item"><a class="nav-link {{user_sug}}" href="/user_suggestions">Bloger Suggestion</a></li>
+                <li class="nav-item"><a class="nav-link {{trending}}" href="/trending">Trending Blog</a></li>
+                <li class="nav-item"><a class="nav-link {{create}}" href="/create_blog">Create blog</a></li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
