--- a/views/suggestion_page.handlebars
+++ b/views/suggestion_page.handlebars
@@ -1,6 +1,6 @@
 <title>{{suggestion_title}}</title>
-<script src="../scripts/mainpageScript.js"></script>
 <div class="container">
+  <h4 class="mt-3">{{hint}}</h4>
   <div class="row row-cols-3">
     {{#each suggestions}}
       <div class="card w-25 m-3">
