--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,21 +22,10 @@
                 <li class="nav-item"><a class="nav-link {{user_sug}}" href="/user_suggestions">Bloger Suggestion</a></li>
                 <li class="nav-item"><a class="nav-link {{trending}}" href="/trending">Trending Blog</a></li>
                 <li class="nav-item"><a class="nav-link {{create}}" href="/create_blog">Create blog</a></li>
+                <li class="nav-item"><a class="nav-link {{profile}}" href="/user/{{email}}">Profile</a></li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-            <div class="nav-item dropdown ms-2 d-inline">
-                <img alt="profpic" class="float-right d-inline mt-0 mp-0" src="../icons/user.png" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="height: 30px;"/>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><h4 class="dropdown-item text-center disabled text-dark" id="username" aria-readonly="true">{{username}}</h4>
-                        <p class="text-center disabled text-dark" id="email" aria-readonly="true">{{email}}</p>
-                    </li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/user/{{email}}">Profile</a></li>
-                    <li><a onclick="logout()" class="dropdown-item" href="#">Logout</a></li>
-                </ul>
+            <div class="nav-item link-dark btn border-0" onclick="logout()">
+              Logout
             </div>
       </div>
     </nav>
