--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,17 +16,22 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link {{home}}" href="/blogHome">Blog Home</a></li>
                 <li class="nav-item"><a class="nav-link {{user_sug}}" href="/user_suggestions">Bloger Suggestion</a></li>
                 <li class="nav-item"><a class="nav-link {{trending}}" href="/trending">Trending Blog</a></li>
                 <li class="nav-item"><a class="nav-link {{create}}" href="/create_blog">Create blog</a></li>
-                <li class="nav-item"><a class="nav-link {{profile}}" href="/user/{{email}}">Profile</a></li>
+                <li class="nav-item"><a class="nav-link {{profile}}" href="/user/{{email}}">My profile</a></li>
             </ul>
             <div class="nav-item link-dark btn border-0" onclick="logout()">
               Logout
             </div>
+          </div>
+          <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
       </div>
     </nav>
     {{{body}}}
