create blog page added, the blog category cannot be selected for now

--- a/views/viewBlog.handlebars
+++ b/views/viewBlog.handlebars
@@ -19,9 +19,8 @@
         <div>Author: {{blog.email_id}}</div>
         <div>created: {{blog.date}}</div>
     </div>
-    <div class="border border-muted border-3 rounded mt-3 p-1">
-        <p>{{blog.context}}
-        </p>
+    <div class="border border-muted border-3 rounded mt-3 p-3">
+        {{{blog.context}}}
     </div>
 </div>
 
