--- a/views/create_blog.handlebars
+++ b/views/create_blog.handlebars
@@ -1,60 +1,49 @@
-<link rel="stylesheet" href="css/create_new.css">
 <div class="container mt-5">
-    <form post="database/blog" method="post">
-        <div class="form-group row">
-            <label for="inputTitle" class="col-sm-2 col-form-label">Title</label>
+    <form action="database/blog" method="post">
+        <div class="form-group row m-2">
+            <label for="blog-title" class="col-sm-2 col-form-label">Title</label>
             <div class="col-sm-10">
-                <input type="Title" class="form-control" name="inputTitle" placeholder="Title">
+                <input type="Title" class="form-control" name="blogTitle" placeholder="Title" required minlength="10">
+            </div>
+            <br>
+        </div>
+        <div class="form-group row m-2">
+            <label for="blog-subject" class="col-sm-2 col-form-label">Subject</label>
+            <div class="col-sm-10">
+                <input type="subject" class="form-control" name="blogSubject" placeholder="subject" required minlength="10">
             </div>
         </div><br>
-        <div class="form-group row">
-            <label for="inputsubject" class="col-sm-2 col-form-label">Subject</label>
-            <div class="col-sm-10">
-                <input type="subject" class="form-control" name="inputsubject" placeholder="subject">
-            </div>
-        </div><br>
-    
         <div class="mb-3">
             <label for="blog-content" class="form-label">Content</label>
-            <textarea class="form-control" name="blog-content" rows="3"></textarea>
+            <textarea class="form-control" name="blogContent" rows="3" required minlength="50"></textarea>
             <script>
-                CKEDITOR.replace('blog-content',{
+                CKEDITOR.replace('blogContent',{
                     plugin:'wysiwygarea, toolbar, basicstyles, link'
                 })
             </script>
         </div>
-        <label class="my-1 mr-2" for="inlineFormCustomSelectPref">View as</label>
-        <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-            <option selected>Choose...</option>
-            <option value="1">Public</option>
-            <option value="2">Private</option>
-        </select><br><br>
-        <hr>
-        <center>
-        <div id="interests" class="flexb" onclick="selectInterest(event)">
-            <div>Brands</div>
-            <div>C</div>
-            <div>C++</div>
-            <div>Countries</div>
-            <div>Entertainment</div>
-            <div>Flutter</div>
-            <div>Government</div>
-            <div>Movies</div>
-            <div>Law</div>
-            <div>Locations</div>
-            <div>Lifestyle</div>
-            <div>Medicine</div>
-            <div>Memes</div>
-            <div>Music</div>
-            <div>Politics</div>
-            <div>Social services</div>
-            <div>Sports</div>
-            <div>Technology</div>
-            <div>Travel</div>
-            <div>World News</div>
+        <div>
+            <label for="blog_visibility">Blog visibliity: </label>
+            <div id="blog_visibility" class="d-inline container ">
+                <label for="visibility">Public</label>
+                <input type="radio" name="visibility" value="public" aria-selected="true" checked>
+                <p class="d-inline">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                <label for="visibility_private_btn">Private</label>
+                <input type="radio" name="visibility" value="private">
+            </div>
         </div>
-        </center>
-        <hr>
-        <input type="submit" class="btn btn-outline-success" value="Publish" name="publish-btn">
+        <label class="mt-3" for="categories">Categories</label>
+        <div class="container row row-cols-4 mt-2" id="categories">
+            {{#each categories}}
+                <span class="btn btn-outline-success m-3">
+                    <input type="checkbox" name="category" value={{this}} class="d-none" checked>
+                    <label for="{{this}}">{{this}}</label>
+                </span>
+            {{/each}}
+        </div>
+        <div class="mb-5 mt-5">
+            <label for="publish-btn">Publish your Blog&nbsp;&nbsp;</label>
+            <input id="publish-btn" type="submit" class="btn btn-outline-success" value="Publish">
+        </div>
     </form>
 </div>
