--- a/views/create_blog.handlebars
+++ b/views/create_blog.handlebars
@@ -1,18 +1,22 @@
+<script src="../scripts/categories_toggle.js"></script>
 <div class="container mt-5">
-    <form action="database/blog" method="post">
+    <form action="/database/blog" method="post">
         <div class="form-group row m-2">
             <label for="blog-title" class="col-sm-2 col-form-label">Title</label>
             <div class="col-sm-10">
-                <input type="Title" class="form-control" name="blogTitle" placeholder="Title" required minlength="10">
+                <input type="Title" class="form-control" name="blogTitle" placeholder="Title" required minlength="10" value="{{blogTitle}}">
             </div>
             <br>
         </div>
         <div class="form-group row m-2">
             <label for="blog-subject" class="col-sm-2 col-form-label">Subject</label>
             <div class="col-sm-10">
-                <input type="subject" class="form-control" name="blogSubject" placeholder="subject" required minlength="10">
+                <input type="subject" class="form-control" name="blogSubject" placeholder="subject" required minlength="10" value="{{blogSubject}}">
             </div>
         </div><br>
+        <div class="d-none" id="prev_data">
+            {{{blogContent}}}
+        </div>
         <div class="mb-3">
             <label for="blog-content" class="form-label">Content</label>
             <textarea class="form-control" name="blogContent" rows="3" required minlength="50"></textarea>
@@ -20,6 +24,7 @@
                 CKEDITOR.replace('blogContent',{
                     plugin:'wysiwygarea, toolbar, basicstyles, link'
                 })
+                CKEDITOR.instances.blogContent.setData(document.getElementById('prev_data').innerHTML)
             </script>
         </div>
         <div>
@@ -32,12 +37,12 @@
                 <input type="radio" name="visibility" value="private">
             </div>
         </div>
-        <label class="mt-3" for="categories">Categories</label>
-        <div class="container row row-cols-4 mt-2" id="categories">
+        <label class="mt-5" for="categories">Categories <p class="text-danger">{{message}}</p></label>
+        <div class="container row row-cols-4 mt-2 {{alertBorder}}" id="categories">
             {{#each categories}}
-                <span class="btn btn-outline-success m-3">
-                    <input type="checkbox" name="category" value={{this}} class="d-none" checked>
-                    <label for="{{this}}">{{this}}</label>
+                <span class="btn btn-outline-success m-3" onclick="toggle(this)" >
+                    <input type="checkbox" name="category" value={{this}} class="d-none">
+                    <label style="cursor: pointer;" for="{{this}}">{{this}}</label>
                 </span>
             {{/each}}
         </div>
