--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -36,40 +36,13 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   background-color: whitesmoke;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-top: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
-.flexb > div {
-  display: inline-block;
-  background-color: #f1f1f1;
-  width: 100px;
-  margin: 10px;
-  text-align: center;
-  line-height: 30px;
-  font-size: 15px;
-}
+
 #signupgender {
   margin-right: 23px;
-}
-
-.flexb div {
-  background-color: black;
-  color: white;
-  border-radius: 20px;
-  padding: 2px 5px;
-  font-style: italic;
-  cursor: default;
-}
-.flexb div:hover {
-  color: turquoise;
-}
-
-.checked {
-  background-color: red !important;
-}
-.checked:hover {
-  color: white !important;
-  font-size: large;
 }
 
 input {
